# dash-apps

./: .clang-format  .gitignore  cowichanfails.txt
NPB/: Makefile  README.md
NPB-3.3.1/: .gitignore  Makefile
all-pairs/: CMakeLists.txt  README  README.md  all-pairs-kernel.h  all-pairs.h  license.md  logger.h  main.cpp  program_options.h
astro-tutorial/: README.md  heic1620a-source.txt
cholesky/: BlockPrefetcher.h  Cholesky.h  CholeskyMPIDTasks.h  CholeskyMPIOMP.h  CholeskyOMPPrefetch.h  CholeskyPrefetch.h  CholeskyTasks.h  CholeskyTasksCopyIn.h  CholeskyTasksCopyInInternal.h  CholeskyTasksPrefetch.h  ExtraeInstrumentation.h  Makefile  MatrixBlock.h  common.h  main.cpp  main_tasks.cpp  main_tasks_prefetch.cpp
cowichan/: .gitignore  Makefile  Terminal_Color.h  benchAll.sh  benchChapel.sh  benchCilk.sh  benchDash.sh  benchGo.sh  benchTBB.sh  c.sh  make.defs  run.sh  swap.sh  w.sh
dash/: Makefile  Makefile.dash  atom.cpp  atom.h  force.h  force_eam.cpp  force_lj.cpp  ljs.cpp  neighbor.cpp  neighbor.h  types.h
dash_tutorial_2017-01/: README.md  make.defs
dummy-app/: CMakeLists.txt  build.sh  main.cpp
heat_eqation/: heatDASH_3d.cpp  heatMPI_2d.c  heatMPI_2d.h  heatMPI_3d.c
multigrid/: .gitignore  CMakeLists.txt  Makefile  README.md  allreduce.h  combine_csvs.sh  combine_image_csvs.sh  heat_equation2d.cpp  heat_equation3d.cpp  make.defs  minimonitoring.h  multigrid.cpp  multigrid2d+minimon.cpp  multigrid2d.cpp  multigrid3d-gpu.cpp  multigrid3d-omp.cpp  multigrid3d.cpp  multigrid3d_elastic.cpp  multigrid3d_readme.txt  overview.gnuplot  trace.gnuplot  trace.py
(+733 files in other folders)
